Thu Jan 15 16:03:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Bounded_Packet_Relay/Bounded_Packet_Relay.mpc:
        * examples/Synch/Synch.mpc:
          Added new mpc files for these examples

Thu Jan 15 08:14:08 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:

          Added documentation for keyword mapping which will allow users to
          map custom defined keywords into the project level scope.
          Removed support for the idlpreprocessor keyword.

        * bin/MakeProjectCreator/config/core.mpb:

          Changed core = 1 into a verbatim clause that enbles the removal of
          the core keyword.

        * bin/MakeProjectCreator/config/vcpartialmacros.mpt:

          Removed the ACE specific precompiled headers macro.

        * bin/MakeProjectCreator/modules/AutomakeProjectCreator.pm:

          Propagated change from GNUACEProjectCreator on Wed Jan  7 06:24:54
          2004.

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
          Added support for keyword mapping which will allow users to map
          custom defined keywords into the project level scope.

        * bin/MakeProjectCreator/modules/MakeWorkspaceCreator.pm:

          Changed the workspace output to allow a user to make a specific
          target within the workspace.  If the user specified target
          requires other projects, then those projects are built also.

        * bin/MakeProjectCreator/modules/Version.pm:

          Updated the version number of MPC.

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Warn about circular dependencies between projects.

        * bin/MakeProjectCreator/templates/bor.mpd:

          Added verbatim markers, removed the use of the core keyword in
          favor of the verbatim used to get the same effect.

        * bin/MakeProjectCreator/templates/gnu.mpd:
